Issue #2012 - fix z-index for dropdown

--- a/webcompat/static/css/src/dropdown.css
+++ b/webcompat/static/css/src/dropdown.css
@@ -19,6 +19,7 @@
 	display: inline-block;
 	position: absolute;
 	margin-top: -9px;
+	z-index: 900;
 }
 
 .sort-dropdown .nav-dropdown-item {
